--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
 }
 p {
   text-align: center;
+  background-color: beige;
 }
 footer {
   margin: 0 10px;
@@ -18,4 +19,10 @@ footer {
   border-radius: 10px;
   display: block;
   margin: 30px auto;
+}
+.contact-link {
+  color: #457747;
+}
+.cro {
+  background-color: aliceblue;
 }
